Portafolio profesional actualizado

--- a/index.html
+++ b/index.html
@@ -2,37 +2,36 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Portafolio de José</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>José Gregorio Márquez | Desarrollador Web</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
   <header>
-    <h1>Hola, soy José</h1>
-    <p>Desarrollador web junior | HTML, CSS, JavaScript</p>
+    <h1>José Gregorio Márquez</h1>
+    <p>Emprendedor con mucho anhelo de trabajar</p>
   </header>
 
-  <section id="proyectos">
-    <h2>Mis Proyectos</h2>
-    <div class="proyecto">
-      <h3>Tabla de descuentos</h3>
-      <p>Proyecto para calcular descuentos y mostrar historial con tasa de cambio.</p>
-      <a href="https://jose122093.github.io/tabla-de-descuentos-y-historial-de-las-transiciones-/" target="_blank">Ver proyecto</a>
-      <a href="https://github.com/jose122093/tabla-de-descuentos-y-historial-de-las-transiciones-" target="_blank">Código fuente</a>
+  <section class="projects">
+    <h2>Proyectos Destacados</h2>
+    <div class="project-card">
+      <h3>Tabla de Descuentos</h3>
+      <p>Calculadora web con tasas de cambio, descuentos y registro de historial.</p>
+      <a href="https://jose122093.github.io/tabla-de-descuentos-y-historial-de-las-transiciones-/" target="_blank">Ver Proyecto</a>
     </div>
-    <!-- Aquí puedes agregar más proyectos -->
+    <!-- Puedes añadir más proyectos aquí -->
   </section>
 
-  <section id="contacto">
+  <section class="contacto">
     <h2>Contacto</h2>
-    <p>Email: <a href="mailto:tu-email@gmail.com">tu-email@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/jose122093" target="_blank">@jose122093</a></p>
+    <p>📧 <a href="mailto:Jose122093@gmail.com">Jose122093@gmail.com</a></p>
+    <p>📱 <a href="https://wa.me/573227904271" target="_blank">+57 322 7904271</a></p>
   </section>
 
   <footer>
-    <p>© 2025 José</p>
+    <p>&copy; 2025 José Gregorio Márquez</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
-"<!-- update para activar GitHub Pages -->" 
