Portafolio renovado con diseño moderno y profesional

--- a/index.html
+++ b/index.html
@@ -2,36 +2,41 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>José Gregorio Márquez | Desarrollador Web</title>
   <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <header>
-    <h1>José Gregorio Márquez</h1>
-    <p>Emprendedor con mucho anhelo de trabajar</p>
-  </header>
+  <div class="container">
+    <header>
+      <h1>José Gregorio Márquez</h1>
+      <p>Emprendedor con mucho anhelo de trabajar</p>
+    </header>
 
-  <section class="projects">
-    <h2>Proyectos Destacados</h2>
-    <div class="project-card">
-      <h3>Tabla de Descuentos</h3>
-      <p>Calculadora web con tasas de cambio, descuentos y registro de historial.</p>
-      <a href="https://jose122093.github.io/tabla-de-descuentos-y-historial-de-las-transiciones-/" target="_blank">Ver Proyecto</a>
-    </div>
-    <!-- Puedes añadir más proyectos aquí -->
-  </section>
+    <main>
+      <section class="projects">
+        <h2>Proyectos Destacados</h2>
+        <div class="cards">
+          <article class="card">
+            <h3>Tabla de Descuentos</h3>
+            <p>Calculadora web con tasas de cambio, descuentos y registro de historial.</p>
+            <a href="https://jose122093.github.io/tabla-de-descuentos-y-historial-de-las-transiciones-/" target="_blank" class="btn">Ver Proyecto</a>
+          </article>
+          <!-- Puedes añadir más tarjetas aquí -->
+        </div>
+      </section>
 
-  <section class="contacto">
-    <h2>Contacto</h2>
-    <p>📧 <a href="mailto:Jose122093@gmail.com">Jose122093@gmail.com</a></p>
-    <p>📱 <a href="https://wa.me/573227904271" target="_blank">+57 322 7904271</a></p>
-  </section>
+      <section class="contacto">
+        <h2>Contacto</h2>
+        <p>📧 <a href="mailto:Jose122093@gmail.com">Jose122093@gmail.com</a></p>
+        <p>📱 <a href="https://wa.me/573227904271" target="_blank">+57 322 7904271</a></p>
+      </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2025 José Gregorio Márquez</p>
-  </footer>
-
-  <script src="script.js"></script>
+    <footer>
+      <p>&copy; 2025 José Gregorio Márquez</p>
+    </footer>
+  </div>
 </body>
 </html>
